# LLMarkable

./: .env.example  .gitignore  AGENT.md  AGENTS.md  README.md  converter.py  development.md  main.py  pyproject.toml  requirements.txt  utils.py
.cursor/rules/: base.mdc  converter.mdc  docling-converter.mdc  taskmaster.mdc
.taskmaster/: config.json
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json  tasks.json.bak
.taskmaster/templates/: PRD.txt
src/: __init__.py  config.py  exceptions.py  serializers.py  utils.py
src/pipelines/: README.md  __init__.py  base.py  docx.py  factory.py  html.py  image.py  pdf.py  pptx.py
src/synthesis/: __init__.py  base.py  circuit_breaker.py  engine.py  prompt_manager.py  token_manager.py  utils.py
src/synthesis/prompts/docx/: reformat_light.txt  summarize_aggressive.txt  summarize_light.txt  summarize_moderate.txt
src/synthesis/prompts/html/: correct_grammar_light.txt  reformat_light.txt  summarize_aggressive.txt  summarize_light.txt  summarize_moderate.txt
src/synthesis/prompts/image/: correct_grammar_light.txt  reformat_light.txt  summarize_aggressive.txt  summarize_light.txt  summarize_moderate.txt
src/synthesis/prompts/markdown/: correct_grammar_light.txt  summarize_aggressive.txt  summarize_light.txt  summarize_moderate.txt
src/synthesis/prompts/pdf/: correct_grammar_light.txt  reformat_light.txt  summarize_aggressive.txt  summarize_light.txt  summarize_moderate.txt
src/synthesis/prompts/pptx/: correct_grammar_light.txt  reformat_light.txt  summarize_aggressive.txt  summarize_light.txt  summarize_moderate.txt
src/synthesis/providers/: __init__.py  base.py  factory.py  noop.py  ollama.py  openai.py
tests/: __init__.py  conftest.py  test_chunk_utilities.py  test_cli_config.py  test_config.py  test_docx_pipeline_unit.py  test_exceptions.py  test_html_pipeline_unit.py  test_image_pipeline_unit.py  test_llm_integration.py  test_main_cli.py  test_ollama_provider.py  test_openai_provider.py  test_pdf_pipeline_unit.py  test_pipeline_factory_integration.py  test_pipeline_synthesis.py  test_pptx_pipeline_unit.py  test_prompt_manager.py  test_synth_engine.py  test_token_manager.py
tests/pipelines/: test_docx_pipeline_unit.py  test_html_pipeline_unit.py  test_pdf_pipeline_unit.py  test_pipeline_factory_integration.py  test_pptx_pipeline_unit.py
tests/synthesis/: test_circuit_breaker.py  test_ollama_provider.py  test_openai_provider.py  test_prompt_manager.py  test_synth_engine.py
